# OTD

./: CMakeLists.txt  README.md  package.xml
cmake/: packages.cmake
config/: kitti_00.yaml  kitti_01.yaml  kitti_02.yaml  kitti_05.yaml  kitti_07.yaml  online.yaml
include/: common_lib.h  ground_segmentation.h  otd.h  utils.hpp
launch/: otd_kitti.launch  otd_online.launch
rviz_cfg/: dynamic_remove.rviz  hangtian.rviz  kitti.rviz  kitti00_compare0.rviz  kitti00_compare1.rviz  kitti02_compare0.rviz  kitti02_compare1.rviz  kitti05_compare0.rviz  kitti05_compare1.rviz  rslidar.rviz  siasun.rviz
src/: CMakeLists.txt  run_otd_KITTI.cpp  run_otd_online.cpp
